Added contact list

--- a/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
+++ b/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
@@ -4432,6 +4432,6 @@
         <image name="userBig" width="71" height="71"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cXK-Rm-WyI"/>
+        <segue reference="Bjg-hP-bfM"/>
     </inferredMetricsTieBreakers>
 </document>
